--- a/janus-beseder.cabal
+++ b/janus-beseder.cabal
@@ -54,6 +54,22 @@ executable JanusB2B
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings, NoImplicitPrelude
 
+executable JanusB2BTimer
+  hs-source-dirs:      Examples/JanusB2B
+  main-is:             MainTimer.hs
+  other-modules:       JanusB2BTimerLoopApp
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-T -dshow-passes -fomit-interface-pragmas -fprint-potential-instances
+  build-depends:       base
+                     , janus-beseder
+                     , janus-connector
+                     , beseder
+                     , text
+                     , mtl
+                     , protolude
+                     , haskus-utils
+                     , hslogger
+  default-language:    Haskell2010
+  default-extensions:  OverloadedStrings, NoImplicitPrelude
 
 
 source-repository head
