Add template haskell to cabal and export at JanusB2BProxy

--- a/janus-beseder.cabal
+++ b/janus-beseder.cabal
@@ -68,6 +68,7 @@ executable JanusB2BTimer
                      , protolude
                      , haskus-utils
                      , hslogger
+                     , template-haskell
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings, NoImplicitPrelude
 
